Fixed boxes to not allow text overflow

--- a/src/components/Box.css
+++ b/src/components/Box.css
@@ -17,7 +17,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
+  width: 100%;
 }
 
 .day-button {
